# SGEMM_CUDA

./: CMakeLists.txt
notes/: .$kernels.drawio.bkp  kernels.drawio
src/kernels/: 3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh
